[package]
name = "transfer-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.9.0"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
dirs = "4.0.0"
clap = "2.33.0"
